--- a/src/components/SimilarProductItem/index.css
+++ b/src/components/SimilarProductItem/index.css
@@ -10,6 +10,11 @@
     margin-right: 64px;
   }
 }
+.link-item {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
 
 .similar-product-img {
   width: 200px;
